--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1(style="margin-top:100px")= 'MedFinder'
+  p Welcome to #{' MedFinder'}
