--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,20 +3,36 @@ html
   head
     meta(name='Viewport', content='width=device-width',intial-scale=1.0)
 
-    title= title
+    title= ' MedFinder'
   
     link(rel='stylesheet',href='/bootstrap/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
   body
-     .container
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/')  MEDFINDER.
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li 
+              a(href='/about/') <b> About </b>
+             li 
+              a(href='/signin') <b> SignIn </b>
+            li 
+              a(href='/review') <b>Add Review </b>
+    .container
       block content
       footer
         .row
           .col-xs-12
-            small &copy;@anurag.edu copy rights 2023
+            small &copy;@nish copy rights 2024
 
+
+  script(src='/javascripts/jquery-1.11.1.min.js')
+  script(src='/javascripts/jquery-1.11.1.min.js')
   
-   
-  script(src='/javascripts/jquery-1.11.1.min.js')
-  script(src='/javascripts/jquery-1.11.1.min.js')
