--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -85,6 +85,6 @@ block content
                     p The doctor was good amd nice treatment.
     .col-xs-12.col-md-3
       p.lead
-        |Perfect Health Medical Centre and Clinics is on Healthcare Appointment Scheduler as it has good facilities with doctors and medical services. 
+        |Perfect Health Medical Centre and Clinics is on MedFinder as it has good facilities with doctors and medical services. 
       p
         | If you've been and you like it - or if you don't - please leave a review to help other people just like you.
