--- a/app_server/views/location-info1.jade
+++ b/app_server/views/location-info1.jade
@@ -87,7 +87,7 @@ block content
                     p Apollo Diagnostics impressed me with their efficient service and accurate results. The friendly staff and clean facilities made my visit pleasant and reassuring. 
     .col-xs-12.col-md-3 
       p.lead 
-        |Apollo Diagnostics is on Healthcare Appointment Scheduler as it has good facilities with doctors and medical services. 
+        |Apollo Diagnostics is on MedFinder as it has good facilities with doctors and medical services. 
       p 
         If you've been and you like it - or if you don't - please leave a review to help other people just like you.
 
