--- a/app_server/views/location-info2.jade
+++ b/app_server/views/location-info2.jade
@@ -89,6 +89,6 @@ block content
                     p TX Hospital provides top-notch healthcare services with a dedicated and skilled medical team. Patients can expect a clean, modern environment and personalized attention for all their medical needs.
     .col-xs-12.col-md-3 
       p.lead 
-        TX Hospital is on Healthcare Appointment Scheduler as it has good facilities with doctors and medical services. 
+        TX Hospital is on MedFinder as it has good facilities with doctors and medical services. 
       p 
         If you've been and you like it - or if you don't - please leave a review to help other people just like you.
